Fix overlapping links, metadata, and titles (#1024)

--- a/app/assets/stylesheets/customOverrides/subheader_users.scss
+++ b/app/assets/stylesheets/customOverrides/subheader_users.scss
@@ -3,9 +3,7 @@ DEFAULT MOBILE STYLING
 ********************************************************/
 
 .user-subheader {
-  margin-left: 15px;
-  margin-right: 15px;
-  margin-bottom: 10px;
+  margin: 25px 15px 10px 15px;
   display: flex;
   border-bottom: .5px solid $light_grey;
   padding-bottom: 6px;
